--- a/views/openacademy.xml
+++ b/views/openacademy.xml
@@ -62,8 +62,9 @@
                                 <field name="duration"/>
                                 <field name="seats"/>
                             </group>
-
                         </group>
+                        <label for="attendee_ids"/>
+                        <field name="attendee_ids"/>
                     </sheet>
                 </form>
             </field>
