--- a/views/partner.xml
+++ b/views/partner.xml
@@ -19,7 +19,7 @@
         </record>
 
         <record model="ir.actions.act_window" id="contact_list_action">
-            <field name="name">Contacts</field>
+            <field name="name">Contactos</field>
             <field name="res_model">res.partner</field>
             <field name="view_mode">tree,form</field>
         </record>
@@ -30,7 +30,7 @@
                   action="contact_list_action"/>
 
         <record model="ir.actions.act_window" id="contact_cat_list_action">
-            <field name="name">Contact Tags</field>
+            <field name="name">Contactos Tags</field>
             <field name="res_model">res.partner.category</field>
             <field name="view_mode">tree,form</field>
         </record>
@@ -39,10 +39,10 @@
                   action="contact_cat_list_action"/>
 
         <record model="res.partner.category" id="teacher1">
-            <field name="name">Teacher / Level 1</field>
+            <field name="name">Maestro / Nivel 1</field>
         </record>
         <record model="res.partner.category" id="teacher2">
-            <field name="name">Teacher / Level 2</field>
+            <field name="name">Maestro / Nivel 2</field>
         </record>
 
 </odoo>
