--- a/views/openacademy.xml
+++ b/views/openacademy.xml
@@ -86,11 +86,22 @@
             </field>
         </record>
 
+        <!-- Vista del calendario -->
+        <record model="ir.ui.view" id="session_calendar_view">
+            <field name="name">session.calendar</field>
+            <field name="model">openacademy.session</field>
+            <field name="arch" type="xml">
+                <calendar string="Session Calendar" date_start="start_date" date_stop="end_date" color="instructor_id">
+                    <field name="name"/>
+                </calendar>
+            </field>
+        </record>
+
 
         <record model="ir.actions.act_window" id="session_list_action">
             <field name="name">Sesion</field>
             <field name="res_model">openacademy.session</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">tree,form,calendar</field>
         </record>
 
         <!-- override the automatically generated list view for courses -->
