--- a/views/openacademy.xml
+++ b/views/openacademy.xml
@@ -40,6 +40,13 @@
                 <search>
                     <field name="name"/>
                     <field name="description"/>
+                    <filter name="my_courses" string="My Courses"
+                            domain="[('responsible_id', '=', uid)]"/>
+                    <group string="Group By">
+                        <filter name="by_responsible" string="Responsible"
+                                context="{'group_by': 'responsible_id'}"/>
+                    </group>
+
                 </search>
             </field>
         </record>
@@ -129,6 +136,7 @@
             <field name="name">Cursos</field>
             <field name="res_model">openacademy.course</field>
             <field name="view_mode">tree,form</field>
+            <field name="context" eval="{'search_default_my_courses': 1}"/>
         </record>
 
         <!-- top level menu: no parent -->
